// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a starred chip for a cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <span
      class="jsx-3285323350 "
      data-test="dhis2-uicore-chip"
    >
      <span
        class="jsx-3489677657"
        data-test="dhis2-uicore-chip-icon"
      >
        <svg
          color="#6e7a8a"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.397 7.041l-6.051.88-.114.022a1 1 0 00-.44 1.683l4.378 4.268-1.033 6.027-.013.11a1 1 0 001.463.944L12 18.13l5.413 2.845.1.047a1 1 0 001.35-1.1l-1.034-6.028 4.38-4.268.078-.086a1 1 0 00-.633-1.62l-6.052-.879-2.705-5.484a1 1 0 00-1.794 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-785997980 "
      >
        <span
          class="labelWithAdornment"
        >
          Rainbow Dash
        </span>
        <svg
          class="adornment"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 7v1h-1.5v6h10v-6h-1.5v-1h1.5c.5522847 0 1 .44771525 1 1v6c0 .5522847-.4477153 1-1 1h-10c-.55228475 0-1-.4477153-1-1v-6c0-.55228475.44771525-1 1-1zm5 3v1h-3v-1zm2.1130214-9.31661889.7739572.63323779-4.84985989 5.92760659-3.3906721-3.3906721.70710678-.70710678 2.60944661 2.60955339z"
            fill="inherit"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </a>
</div>
`;

exports[`renders a starred chip for a non-cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <span
      class="jsx-3285323350 "
      data-test="dhis2-uicore-chip"
    >
      <span
        class="jsx-3489677657"
        data-test="dhis2-uicore-chip-icon"
      >
        <svg
          color="#6e7a8a"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.397 7.041l-6.051.88-.114.022a1 1 0 00-.44 1.683l4.378 4.268-1.033 6.027-.013.11a1 1 0 001.463.944L12 18.13l5.413 2.845.1.047a1 1 0 001.35-1.1l-1.034-6.028 4.38-4.268.078-.086a1 1 0 00-.633-1.62l-6.052-.879-2.705-5.484a1 1 0 00-1.794 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-785997980 "
      >
        <span>
          Rainbow Dash
        </span>
      </span>
    </span>
  </a>
</div>
`;

exports[`renders a starred, selected chip for a cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <span
      class="jsx-3285323350 selected"
      data-test="dhis2-uicore-chip"
    >
      <span
        class="jsx-3489677657"
        data-test="dhis2-uicore-chip-icon"
      >
        <svg
          color="#ffffff"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.397 7.041l-6.051.88-.114.022a1 1 0 00-.44 1.683l4.378 4.268-1.033 6.027-.013.11a1 1 0 001.463.944L12 18.13l5.413 2.845.1.047a1 1 0 001.35-1.1l-1.034-6.028 4.38-4.268.078-.086a1 1 0 00-.633-1.62l-6.052-.879-2.705-5.484a1 1 0 00-1.794 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-785997980 "
      >
        <span
          class="labelWithAdornment"
        >
          Rainbow Dash
        </span>
        <svg
          class="adornment selected"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 7v1h-1.5v6h10v-6h-1.5v-1h1.5c.5522847 0 1 .44771525 1 1v6c0 .5522847-.4477153 1-1 1h-10c-.55228475 0-1-.4477153-1-1v-6c0-.55228475.44771525-1 1-1zm5 3v1h-3v-1zm2.1130214-9.31661889.7739572.63323779-4.84985989 5.92760659-3.3906721-3.3906721.70710678-.70710678 2.60944661 2.60955339z"
            fill="inherit"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </a>
</div>
`;

exports[`renders a starred, selected chip for non-cached dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <span
      class="jsx-3285323350 selected"
      data-test="dhis2-uicore-chip"
    >
      <span
        class="jsx-3489677657"
        data-test="dhis2-uicore-chip-icon"
      >
        <svg
          color="#ffffff"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.397 7.041l-6.051.88-.114.022a1 1 0 00-.44 1.683l4.378 4.268-1.033 6.027-.013.11a1 1 0 001.463.944L12 18.13l5.413 2.845.1.047a1 1 0 001.35-1.1l-1.034-6.028 4.38-4.268.078-.086a1 1 0 00-.633-1.62l-6.052-.879-2.705-5.484a1 1 0 00-1.794 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-785997980 "
      >
        <span>
          Rainbow Dash
        </span>
      </span>
    </span>
  </a>
</div>
`;

exports[`renders an unstarred chip for a non-offline dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <span
      class="jsx-3285323350 "
      data-test="dhis2-uicore-chip"
    >
      <span
        class="jsx-785997980 "
      >
        <span>
          Rainbow Dash
        </span>
      </span>
    </span>
  </a>
</div>
`;

exports[`renders an unstarred chip for an offline dashboard 1`] = `
<div>
  <a
    class="link"
    data-test="dashboard-chip"
    href="/rainbowdash"
  >
    <span
      class="jsx-3285323350 "
      data-test="dhis2-uicore-chip"
    >
      <span
        class="jsx-785997980 "
      >
        <span
          class="labelWithAdornment"
        >
          Rainbow Dash
        </span>
        <svg
          class="adornment"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 7v1h-1.5v6h10v-6h-1.5v-1h1.5c.5522847 0 1 .44771525 1 1v6c0 .5522847-.4477153 1-1 1h-10c-.55228475 0-1-.4477153-1-1v-6c0-.55228475.44771525-1 1-1zm5 3v1h-3v-1zm2.1130214-9.31661889.7739572.63323779-4.84985989 5.92760659-3.3906721-3.3906721.70710678-.70710678 2.60944661 2.60955339z"
            fill="inherit"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </a>
</div>
`;
